Organized image folder structure

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			<div class="header-content">
 				<h1>Carissa Shum</h1>
 				<h2>Hello, I'm</h2>
-				<h3>A web developer and ux/ui designer</h3>
+				<h3>A Web Developer and UX/UI Designer</h3>
 			</div>
 			<!-- Header Links -->
 			<div class="side-nav">
@@ -92,15 +92,15 @@
 				<div class="project-display project-one">
 					<!-- Project Image -->
 					<div class="project-image">
-						<img src="img/seeremproject.png" alt="SeeRem Project">
+						<img src="img/vancityproject.png" alt="VanCity Cycling Project">
 					</div>
 					<!-- Project Description -->
 					<div class="project-description-container">
 						<div class="project-description">
-							<h3>SeeRem</h3>
-							<p>Front-End Website</p>
+							<h3>VanCity Cycling</h3>
+							<p>Mobile Application</p>
 							<!-- Project Page Link -->
-							<a class="arrow" href="seerem.html">View&nbsp;More&nbsp;</a>
+							<a class="arrow-right" href="vancitycycling.html">View&nbsp;More&nbsp;</a>
 						</div>
 					</div>
 				</div>
@@ -109,15 +109,15 @@
 				<div class="project-display project-two">
 					<!-- Project Image -->
 					<div class="project-image">
-						<img src="img/shoeaddictionproject.png" alt="Shoe Addiction">
+						<img src="img/seeremproject.png" alt="SeeRem Project">
 					</div>
 					<!-- Project Description -->
 					<div class="project-description-container">
 						<div class="project-description">
-							<h3>Shoe Addiction</h3>
-							<p>Back-End Website</p>
+							<h3>SeeRem</h3>
+							<p>Front-End Website</p>
 							<!-- Project Page Link -->
-							<a class="arrow" href="shoeaddiction.html">View&nbsp;More</a>
+							<a class="arrow-right" href="seerem.html">View&nbsp;More&nbsp;</a>
 						</div>
 					</div>
 				</div>
@@ -128,15 +128,15 @@
 				<div class="project-display project-one">
 					<!-- Project Image -->
 					<div class="project-image">
-						<!-- <img src=" " alt=" "> -->
+						<img src="img/shoeaddictionproject.png" alt="Shoe Addiction">
 					</div>
 					<!-- Project Description -->
 					<div class="project-description-container">
 						<div class="project-description">
-							<h3>VanCity Cycling</h3>
-							<p>Mobile Application</p>
+							<h3>Shoe Addiction</h3>
+							<p>Back-End Website</p>
 							<!-- Project Page Link -->
-							<a class="arrow" href=" ">View&nbsp;More&nbsp;</a>
+							<a class="arrow-right" href="shoeaddiction.html">View&nbsp;More</a>
 						</div>
 					</div>
 				</div>
@@ -145,15 +145,15 @@
 				<div class="project-display project-two">
 					<!-- Project Image -->
 					<div class="project-image">
-						<!-- <img src=" " alt=" "> -->
+						<img src="img/psodproject.png" alt="PSOD Videos">
 					</div>
 					<!-- Project Description -->
 					<div class="project-description-container">
 						<div class="project-description">
-							<h3>PSOD Grad Video</h3>
-							<p>Video</p>
+							<h3>PSOD Videos</h3>
+							<p>Video Editing</p>
 							<!-- Project Page Link -->
-							<a class="arrow" href=" ">View&nbsp;More&nbsp;</a>
+							<a class="arrow-right" href="psod.html">View&nbsp;More&nbsp;</a>
 						</div>
 					</div>
 				</div>
@@ -164,11 +164,11 @@
 		<footer>
 			<!-- Copyright Information -->
 			<div class="footer-copyright">
-				<p>&#169; 2020 Carissa Shum</p>
+				<p>&#169; 2021 Carissa Shum</p>
 			</div>
 			<!-- Footer Links -->
 			<div class="footer-links">
-				<a href=" " target="_blank">Facebook</a>
+				<!-- <a href=" " target="_blank">Facebook</a> -->
 				<!-- <a href="styleguide.html" target="_blank">Style Guide</a>
 				<a href="https://github.com/cwkshum/IAT339_Portfolio" target="_blank">GitHub</a>
 				<a href="citations.html" target="_blank">Citations</a> -->
