--- a/seerem.html
+++ b/seerem.html
@@ -60,7 +60,7 @@
 					worksites to connect with one another.</p>
 	    		<!-- Website Link -->
 	    		<div class="overview-button">
-	    			<a href="http://www.sfu.ca/~cws8/iat339/seerem" class="action-btn" target="_blank">View&nbsp;Website&nbsp;&rarr;</a>
+	    			<a href="http://www.sfu.ca/~cws8/iat339/seerem" class="action-btn arrow-right" target="_blank">View&nbsp;Website</a>
 	    		</div>
 	    	</div>
 	    	<!-- Image -->
@@ -123,7 +123,7 @@
 					the website.</p>
 				<!-- Image -->
 				<!-- <img src="img/seeremstyleguide.png" alt="SeeRem Style Guide"> -->
-				<img src="img/seeremwireframes.png" alt="SeeRem Wireframes">
+				<img src="img/seerem/seeremwireframes.png" alt="SeeRem Wireframes">
 			</div>
 		</div>
 
@@ -135,7 +135,7 @@
 	    	</div>
 	    	<!-- Description -->
 	    	<div class="process-description">
-				<img src="img/seerempages.png" alt="SeeRem Website Layouts">
+				<img src="img/seerem/seerempages.png" alt="SeeRem Website Layouts">
 				<p>Development of the website began in the second month, where I started creating template pages using HTML and CSS. 
 					Throughout the weeks, we began refining the layout of the overall site by compiling content, images, and deciding 
 					on the overall flow that would create a positive user experience. JavaScript was also used in the site to increase 
@@ -159,7 +159,7 @@
 					smaller screen sizes.</p>
 	    	
 				<!-- Image -->
-				<img src="img/seeremmobile.png" alt="SeeRem Website on Mobile">
+				<img src="img/seerem/seeremmobile.png" alt="SeeRem Website on Mobile">
 			</div>
 		</div>
 
@@ -171,63 +171,29 @@
 	    	</div>
 	    	<!-- Description -->
 	    	<div class="process-description">
-				<p>Once the structure of the website was developed, I had to ensure that the site was responsive so that it can be viewed 
-					on different device screen sizes, including mobile. This was one of the more challenging tasks of the project as it was 
-					my first time developing a website that would be fully responsive. Making the website work well for mobile devices proved 
-					to be very hard as the screen size was a lot smaller in comparison to a desktop screen size. However, through the use of 
-					media queries, I was able to make the elements of the page more appropriate for smaller screen sizes.</p>
+				<p>Overall, the whole process took two months and the website was coded to be responsive on a variety of devices and 
+					browsers. Although we were able to showcase the necessary information to promote SeeRem on a front-end website, I 
+					would like to explore the possibility of developing the back-end portion of the site in the future to handle user 
+					data. Using the experience from this project, I would spend more time considering how future website projects would 
+					look on mobile to make the process of implementing responsiveness easier. The final website was submitted to the 
+					company, where it received a positive review from SEEDA.</p>
 				<!-- Image -->
-				<img src="img/seeremconclusion.png" alt="SeeRem Website Before and After">
+				<img src="img/seerem/seeremconclusion.png" alt="SeeRem Website Before and After">
 			</div>
 		</div>
-		
-
-		<!-- 
-		<div class="container center-align">
-	    	<div class="image-container left">
-		       	<img class="lightbox-img" src="img/seeremstyleguide.png" alt="SeeRem Style Guide">
-	    	</div>
-	    	<div class="page-description right">
-	    		<h3>Ideation & Style Guide</h3>
-	    		<p>During the first month of the project, I began creating wireframes and a style guide for the SeeRem website. The style guide consisted of designing the basic structure and elements that would be incorporated into the site which would help my partner and I keep a consistent design and code structure on all the web pages. This stage also included understanding the branding of the company and how it would be represented through the website. </p>
-		       	<img class="lightbox-img" src="img/seeremwireframes.png" alt="SeeRem Wireframes">
-	    	</div>
-		</div>
-
-		<div class="container">
-	    	<div class="page-description left">
-	    		<h3>Website Development</h3>
-	    		<p>Development of the website began in the second month, where I started creating template pages using HTML and CSS. Throughout the weeks, we began refining the layout of the overall site by compiling content, images, and deciding on the overall flow that would create a positive user experience. JavaScript was also used in the site to increase the functionality, such as having a scroll to top and confirmation messages.</p>
-	    	</div>
-	    	<div class="image-container right">
-		       	<img class="lightbox-img" src="img/seerempages.png" alt="SeeRem Website Layouts">
-	    	</div>
-		</div>
-
-		<div class="container center-align">
-	    	<div class="image-container left">
-		       	<img class="lightbox-img" src="img/seeremmobile.png" alt="SeeRem Website on Mobile">
-	    	</div>
-	    	<div class="page-description right">
-	    		<h3>Challenge of Responsiveness</h3>
-	    		<p>Once the structure of the website was developed, I had to ensure that the site was responsive so that it can be viewed on different device screen sizes, including mobile. This was one of the more challenging tasks of the project as it was my first time developing a website that would be fully responsive. Making the website work well for mobile devices proved to be very hard as the screen size was a lot smaler in comparison to a desktop screen size. However, through the use of media queries, I was able to make the elements of the page more appropriate for smaller screen sizes.</p>
-	    	</div>
-		</div>
-
-		<div class="container column">
-	    	<div class="page-description">
-	    		<h3>Conclusion</h3>
-	    		<p>Overall, the whole process took two months and the website was coded to be responsive on a variety of devices and browsers. Although we were able to showcase the necessary information to promote SeeRem on a front-end website, I would like to explore the possibility of developing the back-end portion of the site in the future to handle user data. Using the experience from this project, I would spend more time considering how future website projects would look on mobile to make the process of implementing responsiveness easier. The final website was submitted to the company, where it received a positive review from Seeda.</p>
-	    	</div>
-	    	<div class="image-container right">
-		       	<img class="lightbox-img" src="img/seeremconclusion.png" alt="SeeRem Website Before and After">
-	    	</div>
-		</div> -->
 
 		<!-- Next Project Button -->
 		<div class="project-navigation">
-			<a href="shoeaddiction.html" class="action-btn arrow">Next:&nbsp;Shoe&nbsp;Addiction</a>
+			<div class="prev">
+				<a href="vancitycycling.html" class="action-btn arrow-left">Previous:&nbsp;VanCity&nbsp;Cycling</a>
+			</div>
+			<div class="next">
+				<a href="shoeaddiction.html" class="action-btn arrow-right">Next:&nbsp;Shoe&nbsp;Addiction</a>
+			</div>
 		</div>
+
+		<!-- Scroll to Top Button -->
+		<button onclick="toTop()" id="scroll-top" class="action-btn">&#9650;</button>
 
 		<!-- Footer -->
 		<footer>
@@ -252,5 +218,9 @@
 		
 		Javascript for Lightbox 
 		<script src="js/lightbox.js"></script> -->
+
+		<!-- Javascript for Scroll to Top -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script src="js/projects.js"></script>
   	</body>
 </html>
