--- a/shoeaddiction.html
+++ b/shoeaddiction.html
@@ -115,7 +115,7 @@
 					finalized, the database was created.</p>
 	    	
 				<!-- Image -->
-				<img src="img/shoeaddictiondbdesign.png" alt="Shoe Addiction Database Design">
+				<img src="img/shoeaddiction/shoeaddictiondbdesign.png" alt="Shoe Addiction Database Design">
 			</div>
 		</div>
 
@@ -130,8 +130,8 @@
 					basic structure for the website based on the wireframes that we designed. Images and content were then added 
 					and the branding was constructed to create a comprehensive user interface.</p>
 	    		<!-- Image -->
-				<img src="img/shoeaddictionwireframes.png" alt="Shoe Addiction Wireframes">
-				<img src="img/shoeaddictionfrontend.png" alt="Shoe Addiction Content Display on Laptop">
+				<img src="img/shoeaddiction/shoeaddictionwireframes.png" alt="Shoe Addiction Wireframes">
+				<img src="img/shoeaddiction/shoeaddictionfrontend.png" alt="Shoe Addiction Content Display on Laptop">
 	    	</div>
 		</div>
 
@@ -152,7 +152,7 @@
 					different abilities that visitors and members have on the site, PHP sessions were implemented to check if a 
 					user is logged in.</p>
 				<!-- Image -->
-				<img src="img/shoeaddictionbackend.png" alt="Shoe Addiction Back-End Implementation">
+				<img src="img/shoeaddiction/shoeaddictionbackend.png" alt="Shoe Addiction Back-End Implementation">
 			</div>
 		</div>
 
@@ -168,7 +168,7 @@
 					time to debug certain issues in our code. By dedicating more time to learning and understanding each topic, 
 					I was able to debug issues that arose and got the final website working with the intended functionality. </p>
 				<!-- Image -->
-				<img src="img/shoeaddictionchallenges.png" alt="Shoe Addiction Account Page">
+				<img src="img/shoeaddiction/shoeaddictionchallenges.png" alt="Shoe Addiction Account Page">
 			</div>
 		</div>
 
@@ -185,28 +185,39 @@
 					a fully developed website that had both front-end and back-end implemented that successfully used a database 
 					to handle the website’s information.</p>
 				<!-- Image -->
-				<img src="img/shoeaddictionconclusion.png" alt="Shoe Addiction Website Pages">
+				<img src="img/shoeaddiction/shoeaddictionconclusion.png" alt="Shoe Addiction Website Pages">
 			</div>
 		</div>
 
 		<!-- Next Project Button -->
 		<div class="project-navigation">
-			<a href="seerem.html" class="action-btn">Next:&nbsp;SeeRem&nbsp;&rarr;</a>
+			<div class="prev">
+				<a href="seerem.html" class="action-btn arrow-left">Previous:&nbsp;SeeRem</a>
+			</div>
+			<div class="next">
+				<a href="psod.html" class="action-btn arrow-right">Next:&nbsp;PSOD Videos</a>
+			</div>
 		</div>
 		
+		<!-- Scroll to Top Button -->
+		<button onclick="toTop()" id="scroll-top" class="action-btn">&#9650;</button>
 
 		<!-- Footer -->
 		<footer>
 			<!-- Copyright Information -->
 			<div class="footer-copyright">
-				<p>&#169; 2020 Carissa Shum</p>
+				<p>&#169; 2021 Carissa Shum</p>
 			</div>
 			<!-- Footer Links -->
 			<div class="footer-links">
-				<a href="styleguide.html" target="_blank">Style Guide</a>
+				<!-- <a href="styleguide.html" target="_blank">Style Guide</a>
 				<a href="https://github.com/cwkshum/IAT339_Portfolio" target="_blank">GitHub</a>
-				<a href="citations.html" target="_blank">Citations</a>
+				<a href="citations.html" target="_blank">Citations</a> -->
 			</div>
 		</footer>
+
+		<!-- Javascript for Scroll to Top -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script src="js/projects.js"></script>
   	</body>
 </html>
