--- a/seerem.html
+++ b/seerem.html
@@ -35,10 +35,9 @@
 			<ul class="nav-link-section">
 		    	<li><a href="index.html" class="nav-link">Projects</a></li>
 		    	<li><a href="about.html" class="nav-link">About</a></li>
-		    	<li><a href=" " class="nav-link">Resume</a></li>
+		    	<li><a href="resume.pdf" target="_blank" class="nav-link">Resume</a></li>
 		  	</ul>
 		</nav>
-
 
 	    <!-- Header -->
 	    <header class="sub-header">
@@ -51,13 +50,13 @@
 	    	<div class="page-description">
 	    		<h2>Overview</h2>
 	    		<hr>
-	    		<p>For this project, I worked in a team of two with the SEEDA company to develop a front-end website 
-					for their SeeRem division. The objective of the project was to design and build a functioning website 
-					for SeeRem to allow their customers to learn more about the SeeRem application and to connect with the 
-					sales team. By communicating with the company, I was able to learn more about the service they were offering 
-					to help my partner and I better design for the intended purpose of the website. The end product was a fully 
-					developed front-end responsive website to promote SeeRem, an application that allows teams working in remote 
-					worksites to connect with one another.</p>
+	    		<p>Working in a team of two, we collaborated with the company <a href="https://www.seeda.dev" target="_blank">SEEDA</a> 
+					to develop a front-end website for their SeeRem division. The objective of the project was to design and build a 
+					functioning website for SeeRem to help potential customers learn more about their application and connect with the 
+					sales team. By communicating with the company, I was able to learn more about the service they were offering, which 
+					assisted in the process of better designing for the intended purpose of the site. The end product was a fully developed 
+					front-end responsive website to promote SeeRem, an application that allows teams working in remote worksites to connect 
+					with one another.</p>
 	    		<!-- Website Link -->
 	    		<div class="overview-button">
 	    			<a href="http://www.sfu.ca/~cws8/iat339/seerem" class="action-btn arrow-right" target="_blank">View&nbsp;Website</a>
@@ -66,9 +65,6 @@
 	    	<!-- Image -->
 	    	<div class="image-container">
 				<img src="img/seeremproject.png" alt="SeeRem Website">
-				
-				<!-- Trigger the Modal -->
-				<!-- <img id="myImg" src="img_snow.jpg" alt="Snow" style="width:100%;max-width:300px"> -->
 	    	</div>
 		</div>
 
@@ -117,13 +113,13 @@
 	    	<!-- Description -->
 	    	<div class="process-description">
 				<p>During the first month of the project, I began creating wireframes and a style guide for the SeeRem website. 
-					The style guide consisted of designing the basic structure and elements that would be incorporated into the 
-					site which would help my partner and I keep a consistent design and code structure on all the web pages. 
-					This stage also included understanding the branding of the company and how it would be represented through 
-					the website.</p>
+					The style guide consisted of designing the basic structure and elements that would be incorporated into the site 
+					which would help keep a consistent design and code structure on all the web pages. This stage also included understanding 
+					the branding of the company and how it would be represented through the website, which led to communicating with the 
+					CEO of the company for additional information regarding their SeeRem application.</p>
 				<!-- Image -->
-				<!-- <img src="img/seeremstyleguide.png" alt="SeeRem Style Guide"> -->
-				<img src="img/seerem/seeremwireframes.png" alt="SeeRem Wireframes">
+				<img src="img/seerem/styleguide.png" alt="SeeRem Style Guide">
+				<img src="img/seerem/wireframes.png" alt="SeeRem Wireframes">
 			</div>
 		</div>
 
@@ -135,11 +131,16 @@
 	    	</div>
 	    	<!-- Description -->
 	    	<div class="process-description">
-				<img src="img/seerem/seerempages.png" alt="SeeRem Website Layouts">
+				<img src="img/seerem/pages.png" alt="SeeRem Website Layouts">
 				<p>Development of the website began in the second month, where I started creating template pages using HTML and CSS. 
 					Throughout the weeks, we began refining the layout of the overall site by compiling content, images, and deciding 
-					on the overall flow that would create a positive user experience. JavaScript was also used in the site to increase 
-					the functionality, such as having a scroll to top and confirmation messages.</p>
+					on the overall flow that would create a positive user experience. For instance, the home page went through multiple 
+					iterations with the first one only containing a brief overview about the SeeRem division as well as the different 
+					services links. I realized that this was not very informative for potential customers when they are trying to learn 
+					more about the application. This led to the decision of including a section discussing the features as well as the 
+					application’s benefits immediately on the home page so that this key information would be easily accessible to customers. 
+					JavaScript was also used in the site to increase the functionality, such as having a scroll to top button and confirmation 
+					messages which would inform users when their form has been successfully submitted.</p>
 			</div>
 		</div>
 
@@ -151,15 +152,15 @@
 	    	</div>
 	    	<!-- Description -->
 	    	<div class="process-description">
-				<p>Once the structure of the website was developed, I had to ensure that the site was responsive so that it can be 
-					viewed on different device screen sizes, including mobile. This was one of the more challenging tasks of the 
-					project as it was my first time developing a website that would be fully responsive. Making the website work well 
-					for mobile devices proved to be very hard as the screen size was a lot smaler in comparison to a desktop screen 
-					size. However, through the use of media queries, I was able to make the elements of the page more appropriate for 
-					smaller screen sizes.</p>
+				<p>Once the structure of the website was developed, I had to ensure that the site was responsive so that it can be viewed on 
+					different device screen sizes, including mobile. This was one of the more challenging tasks of the project as it was my 
+					first time developing a website that would be fully responsive. Making the website work well for mobile devices proved to 
+					be very hard as the screen size was a lot smaller in comparison to a desktop screen size. However, through the use of media 
+					queries and additional mockups for mobile screens, I was able to make the elements of the page more appropriate for smaller 
+					screen sizes.</p>
 	    	
 				<!-- Image -->
-				<img src="img/seerem/seeremmobile.png" alt="SeeRem Website on Mobile">
+				<img src="img/seerem/mobile.png" alt="SeeRem Website on Mobile">
 			</div>
 		</div>
 
@@ -171,14 +172,15 @@
 	    	</div>
 	    	<!-- Description -->
 	    	<div class="process-description">
-				<p>Overall, the whole process took two months and the website was coded to be responsive on a variety of devices and 
-					browsers. Although we were able to showcase the necessary information to promote SeeRem on a front-end website, I 
-					would like to explore the possibility of developing the back-end portion of the site in the future to handle user 
-					data. Using the experience from this project, I would spend more time considering how future website projects would 
-					look on mobile to make the process of implementing responsiveness easier. The final website was submitted to the 
-					company, where it received a positive review from SEEDA.</p>
+				<p>Overall, the whole process took two months and the website was coded to be responsive on a variety of devices and browsers. 
+					Although we were able to showcase the necessary information to promote SeeRem on a front-end website, I would like to 
+					explore the possibility of developing the back-end portion of the site in the future to handle user data. Using the 
+					experience from this project, I would spend more time considering how future website projects would look on mobile to make 
+					the process of implementing responsiveness easier. The final website was submitted to the company, which received a positive 
+					review from SEEDA that led to an internship position where I assisted with the official <a href="https://seerem.com" target="_blank">SeeRem website</a> 
+					launch and worked on a prototype for their web application.</p>
 				<!-- Image -->
-				<img src="img/seerem/seeremconclusion.png" alt="SeeRem Website Before and After">
+				<img src="img/seerem/conclusion.png" alt="SeeRem Website Before and After">
 			</div>
 		</div>
 
