--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<ul class="nav-link-section">
 		    	<li><a href="index.html" class="nav-link">Projects</a></li>
 		    	<li><a href="about.html" class="nav-link">About</a></li>
-		    	<li><a href=" " class="nav-link">Resume</a></li>
+		    	<li><a href="resume.pdf" target="_blank" class="nav-link">Resume</a></li>
 		  	</ul>
 		</nav>
 
@@ -67,7 +67,7 @@
 				<ul>
 			    	<li><a href="index.html#projects">Projects</a></li>
 			    	<li><a href="about.html">About</a></li>
-			    	<li><a href=" ">Resume</a></li>
+			    	<li><a href="resume.pdf" target="_blank">Resume</a></li>
 		  		</ul>
 			</div>
 		</header>
