--- a/projecttemplate.html
+++ b/projecttemplate.html
@@ -31,7 +31,7 @@
 			<ul class="nav-link-section">
 		    	<li><a href="index.html" class="nav-link">Projects</a></li>
 		    	<li><a href="about.html" class="nav-link">About</a></li>
-		    	<li><a href="contact.html" class="nav-link">Contact</a></li>
+		    	<li><a href="resume.pdf" target="_blank" class="nav-link">Resume</a></li>
 		  	</ul>
 		</nav>
 
