--- a/vancitycycling.html
+++ b/vancitycycling.html
@@ -32,7 +32,7 @@
 			<ul class="nav-link-section">
 		    	<li><a href="index.html" class="nav-link">Projects</a></li>
 		    	<li><a href="about.html" class="nav-link">About</a></li>
-		    	<li><a href=" " class="nav-link">Resume</a></li>
+		    	<li><a href="resume.pdf" target="_blank" class="nav-link">Resume</a></li>
 		  	</ul>
 		</nav>
 
