Updated Shoe Addiction project content

--- a/shoeaddiction.html
+++ b/shoeaddiction.html
@@ -48,12 +48,12 @@
 	    	<div class="page-description">
 	    		<h2>Overview</h2>
 	    		<hr>
-	    		<p>Shoe Addiction is a fictional shoe store web application project, focused on the back-end handling of 
-					user requests. The goal is to create a website that would be able to handle user input and utilize a 
-					database to store and retrieve data. The website was developed in a team of three to display products 
-					offered by the store through a database, allow visitors to browse content units, and handle member 
-					registration, log in as well as customization. The overall functionality of the website was developed 
-					to help gain a better understanding of the structure in present-day e-commerce sites.</p>
+	    		<p>Shoe Addiction is a fictional shoe store web application project, focused on the back-end handling of user requests. 
+					The goal is to create a website that would be able to handle user input and utilize a database to store and retrieve 
+					data. The website was developed in a team of three to display products offered by the store through a database, allow 
+					visitors to browse content units, and handle member registration, log in as well as customization. The overall 
+					functionality of the website was developed to help gain a better understanding of the structure in present-day e-commerce 
+					sites.</p>
 	    	</div>
 	    	<!-- Image -->
 	    	<div class="image-container">
@@ -86,7 +86,7 @@
 			<section>
 				<h3>Team</h3>
 				<ul>
-					<li>Rowina Chan</li>
+					<li><a href="https://rowina.ca" target="_blank">Rowina Chan</a></li>
 					<li>Chamira Perera</li>
 				</ul>
 			</section>
@@ -109,10 +109,11 @@
 	    	</div>
 			<!-- Description -->
 	    	<div class="process-description">
-	    		<p>Starting with the database design, an ER Diagram was created to understand what information was needed 
-					to be stored on the site to handle the intended functionality. Four main entities with their respective 
-					attributes and relations were created; Members, Products, Cart and Customization. Once the diagram was 
-					finalized, the database was created.</p>
+	    		<p>Starting with the database design, an ER Diagram was created to understand what information was needed to be stored 
+					on the site to handle the intended functionality. The site had to be able to store and retrieve data regarding 
+					customer accounts, the products available, as well as allow users to customize their accounts and add items to their 
+					cart. This led to the creation of four main entities with their respective attributes and relations; Members, Products, 
+					Cart and Customization. Once the diagram was finalized, the database was created using MySQL.</p>
 	    	
 				<!-- Image -->
 				<img src="img/shoeaddiction/shoeaddictiondbdesign.png" alt="Shoe Addiction Database Design">
@@ -126,12 +127,17 @@
 	    	</div>
 	    	<!-- Description -->
 	    	<div class="process-description">
-	    		<p>The next step of the project was front-end development, where I used HTML, CSS, and Javascript to create a 
-					basic structure for the website based on the wireframes that we designed. Images and content were then added 
-					and the branding was constructed to create a comprehensive user interface.</p>
+	    		<p>The next step of the project was front-end development, where I used HTML, CSS, and Javascript to create a basic structure 
+					for the website based on the wireframes that we designed. Inspiration from current shoe websites was used in order to 
+					maintain a traditional e-commerce site that users would immediately recognize to maintain professional credibility while 
+					incorporating unique elements to distinguish the site. Images and content were then added and the branding was constructed 
+					to create a comprehensive user interface.</p>
 	    		<!-- Image -->
 				<img src="img/shoeaddiction/shoeaddictionwireframes.png" alt="Shoe Addiction Wireframes">
-				<img src="img/shoeaddiction/shoeaddictionfrontend.png" alt="Shoe Addiction Content Display on Laptop">
+				<video width="100%" controls autoplay muted loop>
+					<source src="img/shoeaddiction/frontend.mp4" type="video/mp4">
+				  	Your browser does not support the video tag.
+				</video>
 	    	</div>
 		</div>
 
@@ -142,17 +148,19 @@
 	    	</div>
 	    	<!-- Description -->
 	    	<div class="process-description">
-	    		<p>Our focus then shifted to back-end development where I used PHP and MySQL to process user and database 
-					information. Users could browse the shoes that were retrieved from the database and were also able to use 
-					filters to refine the products that were shown. Additionally, by using AJAX, I was able to update the page 
-					content without having the page reload every time. This meant that the website had live filtering for a more 
-					seamless user shopping experience. Through the use of PHP form handling and SQL query statements, visitors 
-					also had the ability to sign up for an account or login using a pre-existing account. Further functionality 
-					that I made available was the ability for members to add items to their favourites list and cart. With the 
-					different abilities that visitors and members have on the site, PHP sessions were implemented to check if a 
-					user is logged in.</p>
+	    		<p>Our focus then shifted to back-end development where I used PHP and MySQL to process user and database information. Users 
+					could browse the shoes that were retrieved from the database and were also able to use filters to refine the products that 
+					were shown. Additionally, by using AJAX, I was able to update the page content without having the page reload every time. 
+					This meant that the website had live filtering for a more seamless user shopping experience. Through the use of PHP form 
+					handling and SQL query statements, visitors also had the ability to sign up for an account or login using a pre-existing 
+					account. Further functionality that I made available was the ability for members to add items to their favourites list 
+					and cart. With the different abilities that visitors and members have on the site, PHP sessions were implemented to check 
+					if a user is logged in.</p>
 				<!-- Image -->
-				<img src="img/shoeaddiction/shoeaddictionbackend.png" alt="Shoe Addiction Back-End Implementation">
+				<video width="100%" controls autoplay muted loop>
+					<source src="img/shoeaddiction/backend.mp4" type="video/mp4">
+				  	Your browser does not support the video tag.
+				</video>
 			</div>
 		</div>
 
@@ -163,10 +171,10 @@
 	    	</div>
 	    	<!-- Description -->
 	    	<div class="process-description">
-	    		<p>Since this was the first time I worked with PHP and MySQL to develop a website focused primarily on back-end 
-					development, it was challenging to get the functionality of the site working at each phase. It took a lot of 
-					time to debug certain issues in our code. By dedicating more time to learning and understanding each topic, 
-					I was able to debug issues that arose and got the final website working with the intended functionality. </p>
+	    		<p>Since this was the first time I worked with PHP and MySQL to develop a website focused primarily on back-end development, 
+					it was challenging to get the functionality of the site working at each phase. It took a lot of time to debug certain 
+					issues in our code. By dedicating more time to learning and understanding each topic, I was able to debug issues that 
+					arose and got the final website working with the intended functionality.</p>
 				<!-- Image -->
 				<img src="img/shoeaddiction/shoeaddictionchallenges.png" alt="Shoe Addiction Account Page">
 			</div>
@@ -179,13 +187,15 @@
 	    	</div>
 	    	<!-- Project Conclusion -->
 	    	<div class="process-description">
-	    		<p>Overall, the website development took three months to complete. As it was outside of the project scope, for 
-					future iterations I would like to explore the possibility of implementing responsiveness for the website as 
-					well as implementing the purchase process to complete the entire shopping experience. The final outcome was 
-					a fully developed website that had both front-end and back-end implemented that successfully used a database 
-					to handle the website’s information.</p>
+	    		<p>Overall, the website development took three months to complete. As it was outside of the project scope, for future iterations 
+					I would like to explore the possibility of implementing responsiveness for the website as well as implementing the purchase 
+					process to complete the entire shopping experience. The final outcome was a fully developed website that had both front-end 
+					and back-end implemented that successfully used a database to handle the website’s information.</p>
 				<!-- Image -->
-				<img src="img/shoeaddiction/shoeaddictionconclusion.png" alt="Shoe Addiction Website Pages">
+				<video width="100%" controls autoplay muted loop>
+					<source src="img/shoeaddiction/conclusion.mp4" type="video/mp4">
+				  	Your browser does not support the video tag.
+				</video>
 			</div>
 		</div>
 
