Added Shoe Addiction conclusion demo video

--- a/shoeaddiction.html
+++ b/shoeaddiction.html
@@ -192,10 +192,19 @@
 					process to complete the entire shopping experience. The final outcome was a fully developed website that had both front-end 
 					and back-end implemented that successfully used a database to handle the website’s information.</p>
 				<!-- Image -->
-				<video width="100%" controls autoplay muted loop>
+				<!-- <video width="100%" controls autoplay muted loop>
 					<source src="img/shoeaddiction/conclusion.mp4" type="video/mp4">
 				  	Your browser does not support the video tag.
-				</video>
+				</video> -->
+				<div style="padding:70% 0 0 0;position:relative;">
+					<iframe src="https://player.vimeo.com/video/587373476?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;h=af17ab7b4f" 
+							frameborder="0" 
+							allow="autoplay; fullscreen; picture-in-picture" 
+							allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" 
+							title="conclusion.mp4">
+					</iframe>
+				</div>
+				<script src="https://player.vimeo.com/api/player.js"></script>
 			</div>
 		</div>
 
