Added VanCity Cycling demo video and adjusted index header

--- a/shoeaddiction.html
+++ b/shoeaddiction.html
@@ -36,7 +36,6 @@
 		  	</ul>
 		</nav>
 
-
 	    <!-- Header -->
 	    <header class="sub-header">
 	    	<h1>Shoe Addiction</h1>
@@ -132,7 +131,7 @@
 					maintain a traditional e-commerce site that users would immediately recognize to maintain professional credibility while 
 					incorporating unique elements to distinguish the site. Images and content were then added and the branding was constructed 
 					to create a comprehensive user interface.</p>
-	    		<!-- Image -->
+	    		<!-- Video -->
 				<img src="img/shoeaddiction/shoeaddictionwireframes.png" alt="Shoe Addiction Wireframes">
 				<video width="100%" controls autoplay muted loop>
 					<source src="img/shoeaddiction/frontend.mp4" type="video/mp4">
@@ -156,7 +155,7 @@
 					account. Further functionality that I made available was the ability for members to add items to their favourites list 
 					and cart. With the different abilities that visitors and members have on the site, PHP sessions were implemented to check 
 					if a user is logged in.</p>
-				<!-- Image -->
+				<!-- Video -->
 				<video width="100%" controls autoplay muted loop>
 					<source src="img/shoeaddiction/backend.mp4" type="video/mp4">
 				  	Your browser does not support the video tag.
@@ -191,11 +190,7 @@
 					I would like to explore the possibility of implementing responsiveness for the website as well as implementing the purchase 
 					process to complete the entire shopping experience. The final outcome was a fully developed website that had both front-end 
 					and back-end implemented that successfully used a database to handle the website’s information.</p>
-				<!-- Image -->
-				<!-- <video width="100%" controls autoplay muted loop>
-					<source src="img/shoeaddiction/conclusion.mp4" type="video/mp4">
-				  	Your browser does not support the video tag.
-				</video> -->
+				<!-- Embedded Video -->
 				<div style="padding:70% 0 0 0;position:relative;">
 					<iframe src="https://player.vimeo.com/video/587373476?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;h=af17ab7b4f" 
 							frameborder="0" 
