--- a/vancitycycling.html
+++ b/vancitycycling.html
@@ -279,17 +279,22 @@
 	    	</div>
 	    	<!-- Description -->
 	    	<div class="process-description">
-				<!-- <video width="100%" controls loop>
-					<source src="img/vancity/vancityproject.mp4" type="video/mp4">
-					Your browser does not support the video tag.
-				</video> -->
-
 				<p>Within the span of 8 weeks, I was able to help develop a fully functional android application that allowed users to plan their 
 					cycling trips in an accessible way that would help beginner cyclists feel more comfortable with the idea of biking around Vancouver. 
 					For further developments on this app, I would like to explore the possibility of implementing a rating system to allow users to 
 					rate routes as well as provide feedback on them to give other users an idea of what to expect on their journey. At the end of the 
 					project, we were invited by the City of Vancouver to join a virtual session where we presented a demonstration of the VanCity Cycling 
 					application to their transportation division. </p>
+				<!-- Embedded Video -->
+				<div style="padding:56.25% 0 0 0;position:relative;">
+					<iframe src="https://player.vimeo.com/video/587401394?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;h=698037a687" 
+							frameborder="0" 
+							allow="autoplay; fullscreen; picture-in-picture" 
+							allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" 
+							title="VanCity Cycling">
+					</iframe>
+				</div>
+				<script src="https://player.vimeo.com/api/player.js"></script>
 			</div>
 		</div>
 
